Add comments, tests